# youtube-mp3-downloader

./: pyproject.toml  requirements.txt
app/: bot.py  config.py  main.py  pyproject.toml
app/routers/: speed_up.py  streams.py
app/services/: audio_effects.py  youtube.py
app/templates/: index.html
app/utils/: youtube_helpers.py
